--- a/Products/Products.html
+++ b/Products/Products.html
@@ -110,9 +110,9 @@
                      <div id="Price_filter">
                          <form action="">
                              <select name="" id="sort_value">
-                                 <option value="">Sort by featured</option>
-                                 <option value="LH" onclick="sortLH()">Price low to high</option>
-                                 <option value="HL" onclick="sortHL()">Price high to low</option>
+                                 <option >Sort by featured</option>
+                                 <option  id="LH">Price low to high</option>
+                                 <option  id="HL">Price high to low</option>
                              </select>
                          </form>
                      </div>
