--- a/createAccount/login.html
+++ b/createAccount/login.html
@@ -68,7 +68,7 @@
                   </div>
 
                   <div>
-                    <label for="">Create Password</label>
+                    <label for="">Password</label>
                     <input type="text" id="login_password">
                   </div>
                 </form>
