--- a/Checkout/Checkout.html
+++ b/Checkout/Checkout.html
@@ -206,6 +206,19 @@
         </div>
         </div>
     </main>
+    <div id="coupon_div">
+
+        <div id="coupon_inner_div">
+               
+              <p>To avail a discount of 60% use code</p>
+              <div id="coupon_id">
+                <p>"newyear"</p>
+              </div>
+              <button id="ok">OK</button>
+              
+        </div>
+
+    </div>
 </body>
 <script src="./Checkout.js"></script>
 </html>
